# lifly

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  pgadmin-servers.json
server/: Cargo.toml
server/migrations/: 20260310000001_create_users.sql  20260310000002_create_devices.sql  20260310000003_create_atomic_capabilities.sql  20260310000004_create_capability_params.sql  20260310000005_create_tools.sql  20260310000006_create_tool_versions.sql  20260310000007_create_tool_steps.sql  20260310000008_create_categories.sql  20260310000009_create_data_objects.sql  20260310000010_create_file_storage.sql  20260310000011_create_raw_inputs.sql  20260310000012_create_pipelines.sql  20260310000013_create_step_executions.sql  20260310000014_create_reminders.sql  20260310000015_seed_data.sql  20260310000016_fix_tool_step_mappings.sql  20260310000017_fix_admin_password.sql  20260310000018_gemini_seed_update.sql  20260311000001_fix_gemini_models.sql  20260311000002_use_gemini_31_preview.sql  20260311000003_file_storage_mappings.sql  20260311000004_consolidate_seed_updates.sql  20260311000005_seed_growth_record.sql  20260311000006_growth_profile_and_cleanup.sql
server/src/: lib.rs  main.rs
server/src/admin/: auth.rs  handlers.rs  mod.rs  registry.rs  repo.rs
server/src/capability/: handlers.rs  mod.rs  models.rs  repo.rs
server/src/common/: auth.rs  config.rs  error.rs  file_utils.rs  helpers.rs  mod.rs  response.rs  state.rs  ws.rs
server/src/data/: handlers.rs  (+3 more)
server/tests/: admin.rs  integration.rs  llm_executor.rs  llm_integration.rs
(+134 files in other folders)
